@@ -27,6 +27,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Keep original file names when PUTing notes via WebDAV.
 * [jan] Remove configuration option for database table.
 * [jan] Return ETags with browse() API method.
 * [jan] Add browse(), put(), and path_delete() methods to API to support WebDAV access.
@@ -1302,6 +1303,7 @@
    <date>2014-05-06</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Keep original file names when PUTing notes via WebDAV.
 * [jan] Remove configuration option for database table.
 * [jan] Return ETags with browse() API method.
 * [jan] Add browse(), put(), and path_delete() methods to API to support WebDAV access.
